fixing image widths on narrow screens

--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,15 @@ img {
         width: 100%;
     }
 
+    img {
+        width: 80%;
+        margin-left: 10%;;
+    }
+
+    p.caption {
+        width: 75%;
+    }
+
     .visualization-container {
         margin-left: 5%;
         margin-right: 5%;
@@ -95,6 +104,15 @@ img {
 @media screen and (orientation: portrait) and (max-width: 736px) {
     .column {
         width: 95%;
+    }
+
+    img {
+        width: 95%;
+        margin-left: 2.5%;;
+    }
+
+    p.caption {
+        width: 90%;
     }
 
     .visualization-container {
